--- a/homula-camp-app/shopify.app.toml
+++ b/homula-camp-app/shopify.app.toml
@@ -24,5 +24,5 @@ api_version = "2023-10"
 embedded = false
 
 [build]
-automatically_update_urls_on_dev = true
+automatically_update_urls_on_dev = false
 dev_store_url = "homula-camp-2.myshopify.com"
