multipass設定ページ作成

--- a/homula-camp-app2/shopify.app.toml
+++ b/homula-camp-app2/shopify.app.toml
@@ -2,7 +2,7 @@
 
 name = "homula-camp-app2"
 client_id = "f63d951aa165d6ca3e29fdb686b82275"
-application_url = "https://homula-camp-app2.fly.dev"
+application_url = "https://thomson-constitutes-aside-logan.trycloudflare.com"
 embedded = true
 
 [access_scopes]
@@ -11,10 +11,10 @@ scopes = "read_orders,read_assigned_fulfillment_orders,read_merchant_managed_ful
 
 [auth]
 redirect_urls = [
-  "https://homula-camp-app2.fly.dev/auth/callback",
-  "https://homula-camp-app2.fly.dev/auth/shopify/callback",
-  "https://homula-camp-app2.fly.dev/api/auth/callback",
-  "https://homula-camp-app2.fly.dev/.shopify/graphiql/auth/callback"
+  "https://thomson-constitutes-aside-logan.trycloudflare.com/auth/callback",
+  "https://thomson-constitutes-aside-logan.trycloudflare.com/auth/shopify/callback",
+  "https://thomson-constitutes-aside-logan.trycloudflare.com/api/auth/callback",
+  "https://thomson-constitutes-aside-logan.trycloudflare.com/.shopify/graphiql/auth/callback"
 ]
 
 [webhooks]
@@ -24,5 +24,5 @@ api_version = "2023-10"
 embedded = false
 
 [build]
-automatically_update_urls_on_dev = false
+automatically_update_urls_on_dev = true
 dev_store_url = "homula-camp-2.myshopify.com"
