マルチパスログイン実装

--- a/homula-camp-app2/package.json
+++ b/homula-camp-app2/package.json
@@ -34,7 +34,8 @@
     "isbot": "latest",
     "prisma": "^4.13.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@remix-run/eslint-config": "^2.0.0",
@@ -43,6 +44,7 @@
     "@types/node": "^20.6.3",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
+    "@types/uuid": "^9.0.7",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "prettier": "^2.8.8",
